- fixed bug when ending each page - aligned Content
To-do:
- align seperator "=========="

--- a/posts/style.css
+++ b/posts/style.css
@@ -5,11 +5,20 @@
 }
 
 p{
-  margin-top: 2vw;
+  margin-top: 3vw;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  text-align: justify;
+  font-size: 1.5em;
+  color: #2766ee;
+}
+
+.separator {
   text-align: center;
   font-size: 1.5em;
   color: #2766ee;
 }
+
 /* .page {
   width: 30vw;
   height: 44vw;
